After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782972 - gcal-event: fix several memory leaks
gcal-event: fix several memory leaks
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: General
unspecified
Other All
: Normal normal
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-05-23 03:46 UTC by Mohammed Sadiq
Modified: 2017-05-24 18:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gcal-event: fix several memory leaks (1.12 KB, patch)
2017-05-23 03:46 UTC, Mohammed Sadiq
committed Details | Review

Description Mohammed Sadiq 2017-05-23 03:46:33 UTC
.
Comment 1 Mohammed Sadiq 2017-05-23 03:46:41 UTC
Created attachment 352387 [details] [review]
gcal-event: fix several memory leaks
Comment 2 Georges Basile Stavracas Neto 2017-05-24 18:15:18 UTC
Thanks for the patch!

Attachment 352387 [details] pushed as 00b89b8 - gcal-event: fix several memory leaks