gcal-event: fix several memory leaks

https://bugzilla.gnome.org/show_bug.cgi?id=782972